--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,29 +23,29 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="55dp"
             android:text="UserName"
             android:textColor="#000"
-            android:textSize="25sp"
-            android:layout_marginTop="55dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textSize="25sp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginTop="10dp"
             android:id="@+id/circleImage"
-            android:src="@color/colorAccent"
-            app:civ_border_width="2dp"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_gravity="center"
-            app:civ_border_color="#FF000000" />
+            android:layout_marginTop="10dp"
+            android:src="@color/colorAccent"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
 
 
         <RelativeLayout
@@ -55,22 +55,21 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/mainSection"
                 android:layout_width="match_parent"
-                app:cardElevation="4dp"
-                app:cardCornerRadius="2dp"
                 android:layout_height="50dp"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="4dp"
 
                 >
 
 
-
                 <TextView
                     android:id="@+id/count"
-                    android:textSize="25dp"
-                    android:layout_marginLeft="220dp"
-                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Count" />
+                    android:layout_marginLeft="220dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Count"
+                    android:textSize="25dp" />
 
                 <TextView
                     android:id="@+id/art"
@@ -86,52 +85,55 @@
 
             <android.support.v7.widget.CardView
 
-                app:cardCornerRadius="4dp"
-                app:cardElevation="4dp"
-
                 android:id="@+id/AboustUsId"
-                android:layout_below="@+id/mainSection"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/mainSection"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/aboutMe"
-                    android:textColor="#5c0707"
-                    android:textSize="20sp"
-                    android:text="Information technology (IT) is the application of computers to store, retrieve, transmit and manipulate data, or information, often in the context of a business or other enterprise. IT is considered to be a subset of information and communications technology (ICT)."
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="Information technology (IT) is the application of computers to store, retrieve, transmit and manipulate data, or information, often in the context of a business or other enterprise. IT is considered to be a subset of information and communications technology (ICT)."
+                    android:textColor="#5c0707"
+                    android:textSize="20sp" />
 
             </android.support.v7.widget.CardView>
 
             <Button
                 android:id="@+id/LogOut"
-                android:layout_width="wrap_content"
-                android:text="LOGOUt"
-                android:textSize="18sp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_below="@+id/AboustUsId"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editor"
+                android:layout_centerHorizontal="true"
                 android:background="@color/colorPrimary"
+                android:text="LOGOUt"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_marginTop="15dp"
                 android:textColor="#fff"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="15dp" />
+                android:textSize="18sp"
+
+                />
 
             <Button
                 android:id="@+id/editor"
-                android:layout_width="wrap_content"
-                android:text="editor"
-                android:background="@color/colorPrimary"
-                android:textColor="#fff"
+                android:layout_marginTop="15dp"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:textSize="18sp"
+                android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/LogOut"
-                android:layout_marginLeft="250dp"
-                android:layout_alignTop="@+id/LogOut" />
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/AboustUsId"
+                android:background="@color/colorPrimary"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:text="editor"
+                android:textColor="#fff"
+                android:textSize="18sp"
+
+                />
 
 
         </RelativeLayout>
