--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -51,43 +51,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="4dp"
-                app:cardElevation="4dp">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="match_parent">
                 <TextView
-                    android:id="@+id/myHeading"
+                    android:id="@+id/aboutUs"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="This is a simple app for understanding medicine and its uses"
-                    android:textSize="32sp" />
-
-                <View
-                    android:id="@+id/myView"
-                    android:background="#000"
-                    android:layout_below="@+id/myHeading"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp" />
-                <TextView
-                    android:id="@+id/myAim"
-                    android:layout_below="@+id/myHeading"
-                    android:layout_width="match_parent"
-                    android:textSize="32sp"
-                    android:text="This is based on crowdsourcing technology "
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
 
 
             </RelativeLayout>
 
-
-            </android.support.v7.widget.CardView>
         </android.support.v4.widget.NestedScrollView>
 
 
