--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.example.regis.medsystem.Profile">
 
     <android.support.design.widget.AppBarLayout
@@ -110,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/editor"
                 android:layout_centerHorizontal="true"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorAccent"
                 android:text="LOGOUt"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:layout_marginTop="15dp"
@@ -127,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/AboustUsId"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorAccent"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:text="editor"
                 android:textColor="#fff"
