--- a/app/src/main/res/layout/activity_article_demo.xml
+++ b/app/src/main/res/layout/activity_article_demo.xml
@@ -86,6 +86,6 @@
         android:foreground="?attr/selectableItemBackground"
         android:layout_marginTop="15dp"
         android:background="@color/colorPrimary"
-        android:text="@string/submit_article"
+        android:text="@string/publish"
         android:textColor="#f5f2f2" />
 </RelativeLayout>
