--- a/app/src/main/res/layout/article_layout.xml
+++ b/app/src/main/res/layout/article_layout.xml
@@ -5,9 +5,11 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardArticle"
-
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="80dp">
 
         <TextView
             android:id="@+id/titletextArticle"
@@ -22,8 +24,8 @@
         <TextView
             android:id="@+id/authorTextArticle"
             android:text="@string/author"
-            android:textSize="18sp"
-            android:textColor="#000"
+            android:textSize="15sp"
+            android:textColor="#8b7676"
             android:layout_marginLeft="230dp"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
